middleware error fix in api route
