# app/Http/Controllers/API/BaseController.php
@@ -10,6 +10,12 @@ use Illuminate\Http\Request;
     *     title="Integration Swagger Api with Laravel Sanctum authentication",
     *     version="0.1",
     * ),
+    * @OA\SecurityScheme(
+    *     securityScheme="sanctum",
+    *     type="http",
+    *     scheme="bearer",
+    *     bearerFormat="JWT",
+    * )
    
 */
 class BaseController extends Controller
